[package]
name = "rustybgpd"
version = "0.2.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1"
tonic = "0.12.1"
bytes = "1.4"
chrono = "0.4"
prost = "0.8"
prost-types = "0.8"
prost-derive = "0.8"
tokio = { version = "1.29", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec","time"] }
tokio-stream = { version = "0.1", features = ["net"] }
clap = "2.34"
futures = "0.3.28"
futures-core = "0.3.28"
patricia_tree = "0.3"
regex = "1"
hostname = "0.3"
fnv = "1.0"
num_cpus = "1.16"
socket2 = { version="0.4", features = ["all"]}
byteorder = "1.4.3"
once_cell = "1"
thiserror = "1"
libc = "0.2.147"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
toml = "0.5.11"
nix = "0.22"
uuid = { version = "0.8", features = ["v4"] }
ip_network_table-deps-treebitmap = "0.5.0"

[build-dependencies]
tonic-build = "0.5.2"
